welcome.lessons.welcome.bdr.BDR.scala.code
if (estSurMessage) {
	litMessage()
	
} else if (litMessage=Z) {
	recule()
	
}
